--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,27 @@ body
     font-size: 16px;
 }
 
+#header
+{
+    background: #33A;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#header #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
