--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,28 @@
 body
 {
+    background: #1e1f24;
     color: #333;
+    text-align: center;
     font-family: Arial;   
     font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #header
 {
-    background: #33A;
-    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#header #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #header #tagline
@@ -35,4 +45,10 @@ body
 {
     font-size: 20px;
 
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
