--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,12 @@ body
 
 }
 
+#container #rebelogo
+{
+    width: 80px;
+    height: 80px;
+}
+
 #post
 {
     background: white;
@@ -60,9 +66,4 @@ body
     color: white;
     text-align: center;
     padding: 0.5em;
-    
-#container #rebelogo
-{
-    width: 80px;
-    height: 80px;
 }
